Time: 27 ms (98.85%), Space: 59.5 MB (25.29%) - LeetHub